--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -2,27 +2,27 @@
 body, html {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    background-color: #0A3042;
+    color: white;
+
+    font-family: "Funnel Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
 }
 
-/* Main container */
 .main-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    background-color: #0A3042;
-    color: white;
 }
 
-/* Welcome Section */
 .welcome-section {
     text-align: center;
     padding: 2rem;
     width: 100vw;
-    height: 80vh;
-    background-color: #0A3042;
-    color: white;
+    height: 100vh;
 }
 
 .welcome-section h1 {
