--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -6,3 +6,28 @@ a {
 a:hover {
     color: #3c8aff;
 }
+
+.form-size{
+    min-width: 300px;
+}
+
+.register-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
+}
+
+.rotating {
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
