--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -3,12 +3,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 2rem;
     width: clamp(370px, 100%, 100%);
     padding-top: 15px;
     position: sticky;
     top: 0px;
     background-color: #0A3042;
     color: white;
+    z-index: 3;
 }
 
 .logo-container{
@@ -22,21 +24,24 @@
     width: 100%;
     height: 100%;
     margin: 0;
+    object-fit: contain;
 }
 
 .navbar-links {
     display: flex;
-    gap: 1.5rem;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
     padding: 0;
     margin: 0;
     margin-right: 1rem;
-    font-size: clamp(1rem, 1.5rem, 2rem);
+    min-width: 50px;
+    max-width: 400px;
 }
 
 .navbar-links a {
     text-decoration: none;
     color: white;
-    font-size: clamp(1rem, 1.5rem, 2rem);
 }
 
 .link {
