--- a/application/src/components/note/note.css
+++ b/application/src/components/note/note.css
@@ -1,18 +1,19 @@
-.card-content {
-    text-align: justify;
-    height: 100px;
-    max-height: 100px; 
-    overflow: hidden; 
-    position: relative;
+.card{
+    height: fit-content;
+    min-width: 150px;
+    max-width: 100%;
+    border-radius: 20px;
+    background-color: var(--note-color);
 }
 
-.card-content::after {
-    content: ""; 
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 30px; 
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
-    pointer-events: none; 
+.card-content {
+    text-align: justify;
+    height: fit-content; 
+    box-shadow: 0 0px 5px 0px rgba(0, 0, 0, 0.5);
+    width: 90%;
+    border-radius: 10px;
+}
+
+.badge {
+    font-size: 0.8rem;
 }
