--- a/application/src/components/popup/popup.css
+++ b/application/src/components/popup/popup.css
@@ -29,3 +29,27 @@
     height: 80px;
     max-height: 300px;
 }
+
+.color-container{
+    background-color: #FFFFFF;
+}
+
+.color-option {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid gray;
+    cursor: pointer;
+    margin: 5px;
+    transition: box-shadow ease, border ease;
+}
+
+.color-option:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    scale: 1.1;
+}
+
+.color-option.selected {
+    border: 2px solid black;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
