--- a/application/src/components/home/home.css
+++ b/application/src/components/home/home.css
@@ -1,7 +1,13 @@
-.home-container{
-    max-width: 1800px;
+.main-home-container{
+    max-width: 1900px;
     width: 100%;
-    min-height: 80vh;
+    height: 100vh;
+}
+
+.home-container{
+    max-width: 1900px;
+    width: 100%;
+    min-height: 100vh;
 }
 
 #menu {
@@ -18,21 +24,29 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-auto-rows: auto;
-    margin-left: 150px;
+    margin-left: 160px;
 }
 
 #noNotes-grid{
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     margin-left: 150px;
     width: 100%;
     height: 80vh;
 }
 
 #noNotes-p{
-    grid-column: 2/3;
     height: 50%;
+    font-size: large;
+}
+
+.menu-light-mode{
+    color: #0A3042;
+}
+
+.menu-dark-mode{
+    color: white;
 }
 
 @media (max-width: 575px) {
