--- a/application/src/components/login/login.css
+++ b/application/src/components/login/login.css
@@ -1,27 +1,41 @@
-.container {
-    max-width: 600px;
+.main-login-container{
+    max-width: 1900px;
+    width: 100%;
+    height: 100vh;
 }
 
-.login-container{
-    height: 70vh;
+.login-container {
+    height: 100vh;
+}
+
+.login-form-container{
+    min-width: 300px;
+    max-width: 500px;
+    width: 80vw;
+    border-radius: 50px;
+}
+
+.light-mode-container{
+    box-shadow: 0 0px 20px 0px #0A3042;
+}
+
+.dark-mode-container{
+    box-shadow: 0 0px 10px 0px #f9f9f9;
 }
 
 form {
     background-color: #f9f9f9;
-    color: black;
+    color: #0A3042;
+    border-radius: 50px;
 }
 
-.form-size{
-    min-width: 300px;
-}
-
-a {
-    text-decoration: none;
-    color: #74aafc;
-}
-
-a:hover {
+#create-account {
     color: #3c8aff;
+}
+
+#create-account:hover {
+    color: #0d6efd;
+    font-weight: bold;
 }
 
 .rotating {
